Removed some unused classes. Lots of simple cleanup, especially making variables final.